--- a/analyzer-frontend/package.json
+++ b/analyzer-frontend/package.json
@@ -15,6 +15,7 @@
     "@types/fast-levenshtein": "^0.0.4",
     "d3-force": "^3.0.0",
     "dagre": "^0.8.5",
+    "elkjs": "^0.11.0",
     "fast-levenshtein": "^3.0.0",
     "jspdf": "^4.0.0",
     "lucide-react": "^0.563.0",
