--- a/analyzer-backend/pom.xml
+++ b/analyzer-backend/pom.xml
@@ -58,10 +58,11 @@
         <version>2.6.0</version>
     </dependency>
     -->
-    <dependency>
-        <groupId>net.bytebuddy</groupId>
-        <artifactId>byte-buddy</artifactId>
-        <version>1.14.7</version>
+     <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>4.11.0</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
         <groupId>net.bytebuddy</groupId>
